desing fix image spine added alignment fix and form design fix 1

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -2095,6 +2095,13 @@ blockquote {
 }
 
 .contact-form-item .input-group input[type="text"]{
+
+    width: 100%;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
     border-style: solid solid solid none;
     border-color:#000000 ;
     border-radius: 4px;
